--- a/css/style.css
+++ b/css/style.css
@@ -213,8 +213,9 @@ body {
 }
 
 .hero h1 {
-    font-size: 3.5rem;
-    margin-bottom: 1rem;
+    font-size: 1.5rem; 
+    font-weight: 600;
+    margin-bottom: 0.8rem;
     color: var(--dark-color);
 }
 
