--- a/css/style.css
+++ b/css/style.css
@@ -257,7 +257,11 @@ body {
 }
 
 .about-img {
-    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1.5rem;
+    flex-direction: row; /* ⬅️ ini penting biar sejajar kanan-kiri */
 }
 
 .about-img img {
