--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@
     --white-color: #ffffff;
     --transition: all 0.3s ease;
     --shadow: 0 6px 8px rgba(0, 7, 255, 0.8);
+    --shadow2: 0 5px 6px rgba(0, 7, 62, 0.8);
     --border-radius: 8px;
 }
 
@@ -95,7 +96,9 @@ body {
     left: 0;
     width: 100%;
     background: var(--white-color);
-    box-shadow: var(--shadow);
+    box-shadow: var(--shadow2);
+    filter: drop-shadow var(--shadow2);
+    transition: all 0.2s ease;
     z-index: 1000;
 }
 
